Updated to be java8 compat